package entity.material;

public class Beetroot extends Material {
    public Beetroot() {
        super("Beetroot", 50);
    }
}
