package entity.material;

public class Berry extends Material {
    public Berry() {
        super("Berry", 50);
    }
}
