package entity.material;

public class Carrot extends Material {
    public Carrot() {
        super("Carrot", 25);
    }
}
