package entity.material;

public class Egg extends Material {
    public Egg() {
        super("Egg", 25);
    }
}
