package entity.material;

import entity.base.Item;

public abstract class Material extends Item {
    public Material(String name, int price) {
        super(name, price);
    }
}
