package entity.material;

public class Milk extends Material {
    public Milk() {
        super("Milk", 100);
    }
}
