package entity.material;

public class Pumpkin extends Material {
    public Pumpkin() {
        super("Pumpkin", 25);
    }
}
