package entity.material;

public class Wheat extends Material {
    public Wheat() {
        super("Wheat", 25);
    }
}
