package entity.material;

public class Wool extends Material{
    public Wool(){
        super("Wool", 100);
    }
}
